<resources>
    <string name="app_name">UMFeed</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="no_saved_recipes">No saved recipes yet</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_steps">Cooking Steps</string>
    <string name="calories_format">%d calories</string>
    <string name="carbs_format">Carbohydrates: %.1fg</string>
    <string name="protein_format">Protein: %.1fg</string>
    <string name="fats_format">Fats: %.1fg</string>
    <string name="high_protein">High Protein</string>
    <string name="low_fats">Low Fats</string>
    <string name="low_calories">Low Calories</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="leaderboard">Leaderboard\n</string>
    <string name="food_donation">Food\nDonation</string>
    <string name="healthy_recipe">Healthy\nRecipe</string>
    <string name="all_menu_rahmah">All Menu Rahmah</string>
    <string name="menu_rahmah_tnc">T&amp;Cs apply.</string>
    <string-array name="categories">
        <item>Rice and Grains</item>
        <item>Canned and Preserved Foods</item>
        <item>Dehydrated Foods</item>
        <item>Nuts and Seeds</item>
        <item>Proteins</item>
        <item>Condiments and Seasonings</item>
        <item>Biscuits and Snacks</item>
        <item>Beverages</item>
        <item>Powdered Food</item>
        <item>Pasta and Noodles</item>
    </string-array>
    <string-array name="foodBanks">
        <item>KK1</item>
        <item>KK2</item>
        <item>KK3</item>
        <item>KK4</item>
        <item>KK5</item>
        <item>KK6</item>
        <item>KK7</item>
        <item>KK8</item>
        <item>KK9</item>
        <item>KK10</item>
        <item>KK11</item>
        <item>KK12</item>
        <item>KK13</item>
        <item>International House</item>
    </string-array>
    <string-array name="Boolean">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="no_recipes_found">No recipes found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openai_api_key">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</string>

    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="reservation_confirmation">Are you sure you want to reserve %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="daily_reservation_limit_reached">You have reached your daily reservation limit</string>
    <string name="no_items_available">No items available</string>
    <string name="reservations_remaining">Reservations remaining today: %d</string>
    <string name="reserve">Reserve</string>
    <string name="reservation_limit_reached">You have reached your daily reservation limit</string>
    <string name="quantity_format">Quantity: %d</string>
    <string name="my_reservations">My Reservations</string>
    <string name="no_reservations">No reservations found</string>
    <string name="update_status">Update Status</string>
    <string name="reservation_status_updated">Reservation status updated</string>
    <string name="error_updating_status">Error updating status</string>
    <string name="collected">Collected</string>
    <string name="cancelled">Cancelled</string>
    <string name="pending">Pending</string>
    <string name="view_details">View Details</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="reserved_date_format">Reserved: %s</string>
    <string name="textviews">Your Textviews Label</string>
    <string name="personal_information">Personal Information</string>
    <string name="functionality">Functionality</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="saved_recipe">Saved Recipe</string>
    <string name="b40_status">B40 Status</string>
    <string name="donated_items">Donated Items</string>
    <string name="log_out">Log Out</string>
    <string name="textview">Your Textview Label</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="leaderboard_profile">Leaderboard Profile</string>

</resources>